# research-weekly-feed

./: .gitignore  CLAUDE.md  PHASE2_SPEC.md  README.md  main.py  pyproject.toml
config/: keywords.yaml  llm.yaml.template  sources.yaml
src/: __init__.py  config.py  filter.py  llm_scorer.py  report_generator.py
src/fetchers/: __init__.py  arxiv_fetcher.py  base_fetcher.py  crossref_fetcher.py  rss_fetcher.py
